--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="my_git_repo/|my_git_repo/my_git_repo/" kind="src" path="src"/>
+	<classpathentry excluding="my_git_repo/" kind="src" path="src/my_git_repo"/>
+	<classpathentry kind="src" path="src/my_git_repo/my_git_repo"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
